# mmms-demo-data

./: .gitignore  pyproject.toml
mmms_demo_data/: company.py  connect.py  generate.py  group_contract.py  insert.py  member.py  member_contract.py  misc.py  random_access_table.py  run.py
tests/: test_mmms_demo_data.py
