[tool.poetry]
name = "mmms-demo-data"
version = "0.1.0"
description = ""
authors = ["Hugh Wimberly <hugh.wimberly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
faker = "^4.0.0"
pymongo = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
